# ai-pr-reviewer

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: test.yml
backend/: ai_reviewer.py  config.py  github_client.py  main.py  models.py  report_generator.py  requirements.txt  review_history.py
frontend/: index.html
tests/: test_all.py
